<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iTablet21</string>
    <string name="action_settings">Settings</string>
    <string name="ett_undcaja">Un. por caja</string>
    <string name="aceptar_corto">Acep.</string>
    <string name="activa">Ruta activa</string>
    <string name="acum_corto">Acum.</string>
    <string name="acum_mes">Acumulados del mes</string>
    <string name="albaIBS">Alba IBS</string>
    <string name="almacen">Almacen</string>
    <string name="anotacion">Anotacion</string>
    <string name="anular_busq">Anular busqueda</string>
    <string name="anular_busq_resum">Anul. bsq.</string>
    <string name="aplicariva">Aplicar IVA</string>
    <string name="aplicarre">Aplicar recargo</string>
    <string name="asignar_impr">Conectar impresora bluetooth</string>
    <string name="baseimp">Base imp.</string>
    <string name="buscar_lote">Buscar lote</string>
    <string name="cajas">Cajas</string>
    <string name="cajas_dosp">Cajas:</string>
    <string name="cajas_abr_dosp">Cj:</string>
    <string name="cancelar_corto">Canc.</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_dosp">Cantidad:</string>
    <string name="cant_abr_dosp">Cant:</string>
    <string name="cant_ant" tools:ignore="Typos">Cant. ant.</string>
    <string name="cantped">C.pedida</string>
    <string name="cero">0</string>
    <string name="cif">CIF</string>
    <string name="cliente">Cliente</string>
    <string name="cliente_resum">Clte.</string>
    <string name="cobrado">Cobrado</string>
    <string name="codbarras">Cod. barras</string>
    <string name="codigo">Codigo</string>
    <string name="codigo_dosp">Código:</string>
    <string name="cod_altern">Cód. alternativo:</string>
    <string name="cod_postal">Código postal:</string>
    <string name="contacto">Contacto:</string>
    <string name="continuar">Continuar</string>
    <string name="copias">Copias</string>
    <string name="costo">Costo</string>
    <string name="datoscliente">Datos del cliente</string>
    <string name="datoslinea">Datos de la línea</string>
    <string name="descr">Descripcion</string>
    <string name="descr_dosp">Descripción:</string>
    <string name="desde_fecha">Desde fecha:</string>
    <string name="devoluciones">Devoluc.</string>
    <string name="diferencia">Dif.</string>
    <string name="direccion">Direccion</string>
    <string name="dir_direccion">Direccion:</string>
    <string name="dir_poblacion">Poblacion:</string>
    <string name="dir_cpostal">C. Postal:</string>
    <string name="dir_provincia">Provincia:</string>
    <string name="disp_bt_vinc">Dispositivos Bluetooth vinculados</string>
    <string name="divisa">Divisa</string>
    <string name="docum_resum">Doc.</string>
    <string name="dt_promoc">Dto. promocion</string>
    <string name="dtcd_enporc">En porcentaje</string>
    <string name="dtcd_enimp">En importe</string>
    <string name="dtcd_porct">Por cantidad</string>
    <string name="dtcd_por">x</string>
    <string name="dto">%Dto</string>
    <string name="dtoCaja">%Dt.caja:</string>
    <string name="dtopie">Dto. pie:</string>
    <string name="dtoeur">Dto €</string>
    <string name="documento">Documento</string>
    <string name="editar_hco">Editar histórico</string>
    <string name="email">E-mail:</string>
    <string name="empresa">Empr.</string>
    <string name="empresas">Empresas</string>
    <string name="envio">Envío</string>
    <string name="env_ftp_res">Env. FTP</string>
    <string name="env_wifi_res">Env. WIFI</string>
    <string name="entregar">Entregar</string>
    <string name="escojer_empresa">Escoja una empresa</string>
    <string name="escojer_serie">Escoja una serie</string>
    <string name="estadocom">Estado de la comunicacion</string>
    <string name="exento">Exento</string>
    <string name="existencias">Existencias</string>
    <string name="etq_serienum">Serie/Número</string>
    <string name="etq_lyn_serienum">Serie/Nº</string>
    <string name="etq_precioii">Precio I.I.</string>
    <string name="etq_lyn_precioii">Pr. II.</string>
    <string name="etq_tipodoc">Tipo</string>
    <string name="etq_datosdoc">Datos del documento</string>
    <string name="f_entrega">Fecha de entrega</string>
    <string name="fecha">Fecha</string>
    <string name="fechavto">F. vto</string>
    <string name="fenvio">Fecha de envio</string>
    <string name="ficha_art">Ficha del artículo</string>
    <string name="fin_doc">Fin documento</string>
    <string name="formato">Formato</string>
    <string name="formatos">Formatos</string>
    <string name="formatos_upp">FORMATOS</string>
    <string name="fpago">Forma de pago</string>
    <string name="fpagodtos">Forma de pago y descuentos</string>
    <string name="frecogida">Fecha de recogida</string>
    <string name="inf_resum">Inf.</string>
    <string name="ftppassword">Password FTP:</string>
    <string name="ftpservidor">Servidor FTP:</string>
    <string name="ftpusuario">Usuario FTP:</string>
    <string name="getFechaPagare">Indique la fecha del pagaré:</string>
    <string name="getFechaVto">Indique la fecha de vencimiento:</string>
    <string name="grupos_y_dep">Grupos y departamentos</string>
    <string name="guardar_conf">Deberá guardar la configuración antes de probar</string>
    <string name="hasta_fecha">Hasta fecha:</string>
    <string name="hco_art_clte">Histórico del artículo y cliente</string>
    <string name="hora">Hora</string>
    <string name="importe">Importe</string>
    <string name="imp_ant">Imp. ant.</string>
    <string name="impiva">IVA</string>
    <string name="importe_dosp">Importe:</string>
    <string name="impre">Rec.</string>
    <string name="imprimirDoc">IMPRIMIR</string>
    <string name="imprimirSinVal">Sin valorar</string>
    <string name="incidencia">Incidencia</string>
    <string name="incidencia_dosp">Incidencia:</string>
    <string name="inf_cobros">Informe de cobros</string>
    <string name="lote">Lote</string>
    <string name="lote_dosp">Lote:</string>
    <string name="lyn_baseimp">B. imp.</string>
    <string name="lyn_cantidad" tools:ignore="Typos">Cant.</string>
    <string name="lyn_cantped">C. pedida</string>
    <string name="lyn_dtopie">"%Dto.:</string>
    <string name="lyn_piezped">P.pedida</string>
    <string name="lyn_recibirdocas">Rec. doc. asoc.</string>
    <string name="lyn_recibirimag">Rec. imag.</string>
    <string name="lyn_vaciarBD">Vaciar BD</string>
    <string name="mas_direcc">Más direcc.</string>
    <string name="noImprimirDoc">NO IMPRIMIR</string>
    <string name="nombrefiscal">Nombre</string>
    <string name="nombrecomercial">Nombre comercial</string>
    <string name="nombrecom_corto">Nombre com.</string>
    <string name="nuevo_doc">Nv.</string>
    <string name="nueva_incid">Nueva incidencia</string>
    <string name="numero">Número</string>
    <string name="num_paquete">Nº paquete</string>
    <string name="observ">Observac.:</string>
    <string name="observ1">Observacion 1</string>
    <string name="observ2">Observacion 2</string>
    <string name="observdoc">Observaciones</string>
    <string name="ordenacion">Ordenacion</string>
    <string name="ord_resum">Ord.</string>
    <string name="orden">Orden rutero</string>
    <string name="pedirpassw">Introduzca la contraseña</string>
    <string name="pagare_resum">Pag.</string>
    <string name="pendiente">Pendiente</string>
    <string name="peso">Peso</string>
    <string name="piezas">Piezas</string>
    <string name="porcentaje">%</string>
    <string name="porc_devol">% Dev.</string>
    <string name="porciva">% IVA</string>
    <string name="porcre">% Rec.</string>
    <string name="porcre_small">%RE</string>
    <string name="prbase">Precio Base</string>
    <string name="prbase_lyn">Pr. Base</string>
    <string name="prCaja">Pr.caja:</string>
    <string name="precio">Precio</string>
    <string name="precioclte">Precio:</string>
    <string name="pr_especial">Pr. especial</string>
    <string name="pr_especiales">Precios especiales</string>
    <string name="pr_esp">Pr. esp.</string>
    <string name="priva">Precio Iva</string>
    <string name="priva_lyn">Pr. Iva</string>
    <string name="probar_serv">Probar comunicación con servicio</string>
    <string name="promociones">Promociones</string>
    <string name="prom_resum">Prom.</string>
    <string name="prneto">Pr.neto</string>
    <string name="proveedor">Proveedor</string>
    <string name="pr_promoc">Pr. promocion</string>
    <string name="pr_promoc_ii">Pr. prom. iva incl.</string>
    <string name="pulsar_bt">Pulse sobre el que vaya a usar como impresora</string>
    <string name="recibirimag">Recibir imagenes: </string>
    <string name="recibirdocas">Recibir doc. asociados: </string>
    <string name="rec_docasc_abr">Rec. doc. asoc.:</string>
    <string name="recogida">Recogida</string>
    <string name="reparto">Reparto</string>
    <string name="resdivisa">Resumen por divisa</string>
    <string name="riesgo">Riesgo</string>
    <string name="ruta">Ruta</string>
    <string name="ruta_act">Ruta activa:</string>
    <string name="saldo">Saldo</string>
    <string name="selecc_doc">Seleccione un tipo de documento</string>
    <string name="selec_formato">Seleccione un formato</string>
    <string name="serie">Serie</string>
    <string name="series">Series</string>
    <string name="simboloEuro"> €</string>
    <string name="sincargo">Sin cargo</string>
    <string name="stock">Stock</string>
    <string name="stockclte">Existencias:</string>
    <string name="sup_riesgo">Superado el riesgo máximo autorizado</string>
    <string name="tarifa">Tarifa</string>
    <string name="tarifadto">Tarifa dto.</string>
    <string name="tasa1">Tasa 1</string>
    <string name="tasa2">Tasa 2</string>
    <string name="terminal">Terminal:</string>
    <string name="texto_incid">Introduzca texto:</string>
    <string name="texto_linea"> Tx</string>
    <string name="texto_l_modif"> Tx - Md</string>
    <string name="tipoiva">Tipo Iva</string>
    <string name="tlf1">Telefono 1:</string>
    <string name="tlf2">Telefono 2:</string>
    <string name="totalbase">Total</string>
    <string name="totales">TOTALES</string>
    <string name="totales_min">Totales</string>
    <string name="totalVentas">Total ventas:</string>
    <string name="unidades">Unidades</string>
    <string name="und_resum">Und.</string>
    <string name="undcaja">Unid. por caja:</string>
    <string name="udCajaRes">Und.caja:</string>
    <string name="vaciarBD">Vaciar base de datos</string>
    <string name="vacio"> </string>
    <string name="vendedor">Vendedor:</string>
    <string name="vender">Vender</string>
    <string name="verdtos">Ver dtos.</string>
    <string name="version">Versión:</string>
    <string name="vtos_agrup">Vtos. agrup.</string>
    <string name="wifi">Wifi</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_borrar">Borrar</string>
    <string name="btn_devoluciones">Devoluciones</string>
    <string name="ventas">Ventas</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_modif">Modificar</string>
    <string name="btn_crearPDF">Exp. PDF</string>
    <string name="rdb_factura">Factura</string>
    <string name="rdb_albaran">Albaran</string>
    <string name="rdb_pedido">Pedido</string>
    <string name="rdb_presup">Presupuesto</string>
    <string name="aceptar_upp">ACEPTAR</string>
    <string name="cancelar_upp">CANCELAR</string>
    <string name="mni_actualizar">Actualizar la aplicacion</string>
    <string name="mni_cargas">Cargas</string>
    <string name="mni_configuracion">Configuracion</string>
    <string name="mni_confimpr">Impresora</string>
    <string name="mni_verID">Ver ID del dispositivo</string>
    <string name="mni_informes">Informes</string>
    <string name="mni_infstock">Inf. de stock</string>
    <string name="mni_infdoc">Inf. de documentos</string>
</resources>