<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ly_dtoscascada"
              android:orientation="vertical"
              android:layout_width="400dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:background="#FFFFFF"
              android:padding="20dp"
              >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="45dp"
    >

    <TextView
      style="@style/Texto18"
      android:id="@+id/textView5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:text="@string/dtcd_enporc"/>

    <EditText
      android:id="@+id/edtVDtc_Porc"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="right"
      android:inputType="numberDecimal"
      android:nextFocusDown="@+id/edtVDc_Imp"
      android:selectAllOnFocus="true"
      android:maxLength="5" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="45dp"
    >

    <TextView
      style="@style/Texto18"
      android:id="@+id/textView6"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:text="@string/dtcd_enimp"/>

    <EditText
      android:id="@+id/edtVDtc_Imp"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="right"
      android:inputType="numberDecimal"
      android:nextFocusDown="@+id/edtVDtc_Cant1"
      android:selectAllOnFocus="true"
      android:maxLength="7"
      />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="45dp"
    >

    <TextView
      style="@style/Texto18"
      android:id="@+id/textView7"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:text="@string/dtcd_porct"/>

    <EditText
      android:id="@+id/edtVDtc_Cant1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="right"
      android:inputType="numberDecimal"
      android:selectAllOnFocus="true"
      android:nextFocusDown="@+id/edtVDtc_Cant2"
      android:maxLength="5"
      />

    <TextView
      style="@style/Texto18"
      android:id="@+id/textView8"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.2"
      android:text="@string/dtcd_por"
      android:layout_marginLeft="5dp"/>

    <EditText
      android:id="@+id/edtVDtc_Cant2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="right"
      android:inputType="numberDecimal"
      android:selectAllOnFocus="true"
      android:maxLength="5"
      />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="40dp"
    android:background="#B6B6B6"
    android:paddingTop="5dp" >

    <Button
      android:id="@+id/btnModificar"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="#B6B6B6"
      android:drawableTop="@drawable/ic_action_bar_modificar_blanco"
      android:textColor="#FFFFFF"
      android:text="@string/btn_modif"
      android:onClick="modificarDtCasc"/>

    <Button
      android:id="@+id/btnBorrar"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="#B6B6B6"
      android:drawableTop="@drawable/ic_action_bar_borrar_blanco"
      android:textColor="#FFFFFF"
      android:text="@string/btn_borrar"
      android:onClick="borrarDtCasc"/>

    <Button
      android:id="@+id/btnCancelar"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="#B6B6B6"
      android:drawableTop="@drawable/ic_action_bar_cancel_blanco"
      android:textColor="#FFFFFF"
      android:text="@string/btn_salir"
      android:onClick="cancelarDtCasc"/>

    <Button
      android:id="@+id/btnAceptar"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="#B6B6B6"
      android:drawableTop="@drawable/ic_action_bar_ok_blanco"
      android:onClick="aceptarDtCasc"
      android:textColor="#FFFFFF"
      android:text="@string/btn_aceptar" />
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="40dp">

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/dto"
      android:id="@+id/textView"
      android:gravity="right"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/importe"
      android:id="@+id/textView2"
      android:gravity="right"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/cantidad"
      android:id="@+id/textView3"
      android:gravity="right"/>

    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/cantidad"
      android:id="@+id/textView4"
      android:gravity="right"/>

  </LinearLayout>

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp"
      android:background="#ffb1b1b1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDtosC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />


  </LinearLayout>

</LinearLayout>